Added René Post to the list of authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,6 @@ $Id$
 
 * Developers
 
-Jan Rochat          (A.E.T. Europe B.V., www.aeteurope.nl)
 Rickard Bellgrim    (.SE, The Internet Infrastructure Foundation, www.iis.se)
+René Post           (XPT Software and Consulting, www.xpt.nl)
 Roland van Rijswijk (SURFnet bv, www.surfnet.nl)
