SOFTHSM-76: Revert changes to OpenSSL. We only limit key generation for Botan. Also remove the 1023 bit key test.

--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,8 @@ SoftHSM develop
   version of Botan with a broken ECC/OID implementation.
 * SOFTHSM-70: Improved handling of the database backend.
 * SOFTHSM-71: Supporting Botan 1.11.
-* SOFTHSM-76: Do not generate RSA keys smaller than 1024 bit.
+* SOFTHSM-76: Do not generate RSA keys smaller than 1024 bit when 
+  using the Botan crypto backend.
 
 Bugfixes:
 * SOFTHSM-69: GOST did not work when you disabled ECC.
