--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ SoftHSM develop
 
 Bugfixes:
 * SOFTHSM-69: GOST did not work when you disabled ECC.
+* SOFTHSM-78: Correct the attribute checks for a number of objects.
 * Fixed a number of memory leaks.
 
 
