SOFTHSM-39: Fix 64 bit build on sparc sun4v

--- a/NEWS
+++ b/NEWS
@@ -11,10 +11,11 @@ SoftHSM develop
 * SOFTHSM-83: Support CKA_VALUE_BITS for CKK_DH private key object.
 
 Bugfixes:
+* SOFTHSM-39: Fix 64 bit build on sparc sun4v.
 * SOFTHSM-69: GOST did not work when you disabled ECC.
 * SOFTHSM-78: Correct the attribute checks for a number of objects.
-* Fixed a number of memory leaks.
 * SOFTHSM-80: Prevent segfault in OpenSSL GOST HMAC code.
+* Fixed a number of memory leaks.
 
 
 SoftHSM 2.0.0a1 - 2014-02-10
