--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ SoftHSM develop
 * SOFTHSM-76: Do not generate RSA keys smaller than 1024 bit when 
   using the Botan crypto backend.
 * SOFTHSM-83: Support CKA_VALUE_BITS for CKK_DH private key object.
+* SUPPORT-129: Possible to use an empty template in C_GenerateKey.
+  The class and key type are inherited from the generation mechanism.
+  Some mechanisms do however require a length attribute. [SOFTHSM-88]
 
 Bugfixes:
 * SOFTHSM-69: GOST did not work when you disabled ECC.
