SOFTHSM-85: Rename libsofthsm.so to libsofthsm2.so and prefix the command line utilties with softhsm2-.

--- a/src/bin/dump/softhsm2-dump-db.1
+++ b/src/bin/dump/softhsm2-dump-db.1
@@ -1,12 +1,12 @@
-.TH SOFTHSM-DUMP-DB 1 "20 October 2013" "SoftHSM"
+.TH SOFTHSM2-DUMP-DB 1 "20 March 2014" "SoftHSM"
 .SH NAME
-softhsm-dump-db \- SoftHSM database dump
+softhsm2-dump-db \- SoftHSM database dump
 .SH SYNOPSIS
 .PP
-.B softhsm-dump-db
+.B softhsm2-dump-db
 .I path
 .SH DESCRIPTION
-.B softhsm-dump
+.B softhsm2-dump
 is a tool that can dump SoftHSM v2 database for debugging purposes.
 .LP
 .SH OPTIONS
