--- a/src/bin/dump/softhsm2-dump-file.1
+++ b/src/bin/dump/softhsm2-dump-file.1
@@ -1,12 +1,12 @@
-.TH SOFTHSM-DUMP-FILE 1 "20 October 2013" "SoftHSM"
+.TH SOFTHSM2-DUMP-FILE 1 "20 March 2014" "SoftHSM"
 .SH NAME
-softhsm-dump-file \- SoftHSM object file dump
+softhsm2-dump-file \- SoftHSM object file dump
 .SH SYNOPSIS
 .PP
-.B softhsm-dump-file
+.B softhsm2-dump-file
 .I path
 .SH DESCRIPTION
-.B softhsm-dump-file
+.B softhsm2-dump-file
 is a tool that can dump SoftHSM v2 object file for debugging purposes.
 .LP
 .SH OPTIONS
