--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,7 @@ Bugfixes:
 * SOFTHSM-69: GOST did not work when you disabled ECC.
 * SOFTHSM-78: Correct the attribute checks for a number of objects.
 * SOFTHSM-80: Prevent segfault in OpenSSL GOST HMAC code.
+* SOFTHSM-91: Fix a warning from static code analysis.
 * Fixed a number of memory leaks.
 
 
