--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM develop
+SoftHSM 2.0.0a2 - 2014-03-25
 
 * SOFTHSM-68: Display a better configure message when there is a 
   version of Botan with a broken ECC/GOST/OID implementation.
