--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS for SoftHSM -- History of user visible changes
 
+SoftHSM develop
+
+Bugfixes:
+* SOFTHSM-93: Invalid C++ object recycling.
+
+
 SoftHSM 2.0.0a2 - 2014-03-25
 
 * SOFTHSM-68: Display a better configure message when there is a 
