--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ SoftHSM develop
 Bugfixes:
 * SOFTHSM-93: Invalid C++ object recycling.
 * SOFTHSM-95: umask affecting the calling application.
+* SOFTHSM-97: Check if Botan has already been initialized.
 
 
 SoftHSM 2.0.0a2 - 2014-03-25
