--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Bugfixes:
 * SOFTHSM-93: Invalid C++ object recycling.
 * SOFTHSM-95: umask affecting the calling application.
 * SOFTHSM-97: Check if Botan has already been initialized.
+* SOFTHSM-98: Handle mandatory attributes for DSA and ECDSA correctly.
 
 
 SoftHSM 2.0.0a2 - 2014-03-25
