SOFTHSM-98: Also applies to DH

--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,8 @@ Bugfixes:
 * SOFTHSM-93: Invalid C++ object recycling.
 * SOFTHSM-95: umask affecting the calling application.
 * SOFTHSM-97: Check if Botan has already been initialized.
-* SOFTHSM-98: Handle mandatory attributes for DSA and ECDSA correctly.
+* SOFTHSM-98: Handle mandatory attributes for DSA, DH, and ECDSA
+  correctly.
 
 
 SoftHSM 2.0.0a2 - 2014-03-25
