SOFTHSM-66: Update the NEWS

--- a/NEWS
+++ b/NEWS
@@ -5,8 +5,11 @@ SoftHSM develop
 * SOFTHSM-84: Check that all mandatory attributes are given during
   the creation process.
 * SOFTHSM-92: Enable -fvisibility=hidden on per default
+* Add support for CKM_RSA_PKCS key un/wrapping
+  (Patch from Petr Spacek)
 
 Bugfixes:
+* SOFTHSM-66: Attribute handling when using multiple threads
 * SOFTHSM-93: Invalid C++ object recycling.
 * SOFTHSM-95: umask affecting the calling application.
 * SOFTHSM-97: Check if Botan has already been initialized.
