--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ Bugfixes:
 * SOFTHSM-97: Check if Botan has already been initialized.
 * SOFTHSM-98: Handle mandatory attributes for DSA, DH, and ECDSA
   correctly.
+* SOFTHSM-99: Binary encoding of GOST values.
 
 
 SoftHSM 2.0.0a2 - 2014-03-25
