--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS for SoftHSM -- History of user visible changes
 
+SoftHSM develop
+
+Bugfixes:
+* Coverity found a number of issues.
+
+
 SoftHSM 2.0.0b1 - 2014-09-10
 
 * SOFTHSM-84: Check that all mandatory attributes are given during
