--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,13 @@ NEWS for SoftHSM -- History of user visible changes
 
 SoftHSM develop
 
+* SOFTHSM-100: Use --free with softhsm2-util to initialize the first
+  free token.
+* Add support for CKM_RSA_PKCS_OAEP key un/wrapping.
+  (Patch from Petr Spacek)
+* Use OpenSSL EVP interface for AES key wrapping.
+  (Patch from Petr Spacek)
+
 Bugfixes:
 * Coverity found a number of issues.
 
