Update version and NEWS for release 2.0.0b2

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM develop
+SoftHSM 2.0.0b2 - 2014-12-28
 
 * SOFTHSM-50: OpenSSL FIPS support.
 * SOFTHSM-64: Updated build script for Windows.
