--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ SoftHSM 2.0.0b2 - 2014-12-28
 * Use OpenSSL EVP interface for AES key wrapping.
   (Patch from Petr Spacek)
 * Allow reading configuration file from user's home directory.
+  (Patch from Nikos Mavrogiannopoulos)
 
 Bugfixes:
 * SOFTHSM-102: C_DeriveKey() uses OBJECT_OP_GENERATE.
