--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS for SoftHSM -- History of user visible changes
 
+SoftHSM develop
+
+Bugfixes:
+* SUPPORT-154: A marked as non-modifiable object cannot be generated.
+
+
 SoftHSM 2.0.0b2 - 2014-12-28
 
 * SOFTHSM-50: OpenSSL FIPS support.
