SOFTHSM-110: subdir-objects warnings from autoreconf.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ SoftHSM develop
 
 Bugfixes:
 * SOFTHSM-108: A marked as trusted certificate cannot be imported.
+* SOFTHSM-110: subdir-objects warnings from autoreconf.
 * SUPPORT-154: A marked as non-modifiable object cannot be generated.
 
 
