--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ NEWS for SoftHSM -- History of user visible changes
 
 SoftHSM develop
 
+SOFTHSM-113: Support for Botan 1.11.14
+
 Bugfixes:
 * SOFTHSM-108: A marked as trusted certificate cannot be imported.
 * SOFTHSM-109: Unused parameter and variable warnings.
