--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,9 @@ NEWS for SoftHSM -- History of user visible changes
 
 SoftHSM develop
 
-SOFTHSM-113: Support for Botan 1.11.15
+* SOFTHSM-113: Support for Botan 1.11.15
+* SUPPORT-139: Support deriving generic secrets, DES, DES2, DES3, and AES.
+  Using DH, ECDH or symmetric encryption.
 
 Bugfixes:
 * SOFTHSM-108: A marked as trusted certificate cannot be imported.
