--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM develop
+SoftHSM 2.0.0b3 - 2015-04-17
 
 * SOFTHSM-113: Support for Botan 1.11.15
 * SOFTHSM-119: softhsm2-util: Support ECDSA key import
