--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS for SoftHSM -- History of user visible changes
 
+SoftHSM develop
+
+Bugfixes:
+* SOFTHSM-120: Segfault after renaming variables.
+
+
 SoftHSM 2.0.0b3 - 2015-04-17
 
 * SOFTHSM-113: Support for Botan 1.11.15
