--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM develop
+SoftHSM 2.0.0rc1 - 2015-06-01
 
 * SOFTHSM-121: Test cases for C_DecryptUpdate/C_DecryptFinal.
 * Support C_DecryptUpdate/C_DecryptFinal for symmetric algorithms.
