Issue #174: C_DeriveKey() error with leading zero bytes.

--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,7 @@ Bugfixes:
   (Patch from agrandville)
 * Issue #169: One-byte buffer overflow in call to EVP_DecryptUpdate.
 * Issue #173: Adjust return values for the template parsing.
+* Issue #174: C_DeriveKey() error with leading zero bytes.
 * SOFTHSM-123: Fix library cleanup on BSD.
 
 
