--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,8 @@ Bugfixes:
   (Patch from Nicholas Wilson)
 * Issue #129: Fix errors reported by Visual Studio 2015.
   (Patch from Jaroslav Imrich)
+* Issue #132: Handle the CKA_CHECK_VALUE correctly for certificates
+  and symmetric key objects.
 * Issue #154: Fix the Windows build and destruction order of objects.
   (Patch from agrandville)
 * Issue #162: Not possible to create certificate objects containing
