SoftHSM 2.1.0: Update version number

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM develop
+SoftHSM 2.1.0 - ???
 
 * Issue #136: Improved guide and build scripts for Windows.
   (Thanks to Jaroslav Imrich)
