--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM 2.1.0 - ???
+SoftHSM 2.1.0 - 2016-03-14
 
 * Issue #136: Improved guide and build scripts for Windows.
   (Thanks to Jaroslav Imrich)
