--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ NEWS for SoftHSM -- History of user visible changes
 
 SoftHSM develop
 
+* Issue #185: Change access mode bits for /var/lib/softhsm/tokens/
+  to 1777. All users can now create tokens, but only access their own.
+  (Patch from Rick van Rein)
 * Issue #186: Reinitializing a token will now keep the token, but all
   token objects are deleted, the user PIN is removed and the token
   label is updated.
