--- a/NEWS
+++ b/NEWS
@@ -10,10 +10,20 @@ SoftHSM develop
   label is updated.
 * Issue #198: Calling C_GetSlotList with NULL_PTR will make sure that
   there is always a slot with an uninitialized token available.
+* Issue #199: The token serial number will be used when setting the slot
+  number. The serial number is set after the token has been initialized.
+  (Patch from Lars Silvén)
+* Issue #203: Update the command utils to use the token label or serial
+  to find the token and its slot number.
+* Issue #209: Possibility to test other PKCS#11 implementations with the
+  CppUnit test.
+  (Patch from Lars Silvén)
 
 Bugfixes:
 * Issue #201: Missing new source file and test configuration in the
   Windows build project.
+* Issue #207: Fix segmentation faults in loadLibrary function.
+  (Patch from Jaroslav Imrich)
 
 
 SoftHSM 2.1.0 - 2016-03-14
