--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ NEWS for SoftHSM -- History of user visible changes
 
 SoftHSM develop
 
+* Issue #143: Delete a token using softhsm2-util.
 * Issue #185: Change access mode bits for /var/lib/softhsm/tokens/
   to 1777. All users can now create tokens, but only access their own.
   (Patch from Rick van Rein)
