--- a/NEWS
+++ b/NEWS
@@ -19,10 +19,13 @@ SoftHSM develop
 * Issue #209: Possibility to test other PKCS#11 implementations with the
   CppUnit test.
   (Patch from Lars Silvén)
+* Issue #223: Mark public key as non private by default.
+  (Patch from Nikos Mavrogiannopoulos)
 
 Bugfixes:
 * Issue #201: Missing new source file and test configuration in the
   Windows build project.
+* Issue #205: ECDSA P-521 support for OpenSSL and better test coverage.
 * Issue #207: Fix segmentation faults in loadLibrary function.
   (Patch from Jaroslav Imrich)
 * Issue #218: Fix build warnings.
