--- a/NEWS
+++ b/NEWS
@@ -44,6 +44,7 @@ Bugfixes:
 * Issue #241: Added EXTRALIBS to Windows utils project.
   (Patch from Peter Polačko)
 * Issue #250: C++11 not detected.
+* Issue #255: API changes in Botan 1.11.27.
 
 
 SoftHSM 2.1.0 - 2016-03-14
