--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ NEWS for SoftHSM -- History of user visible changes
 
 SoftHSM 2.3.0 - 2017-xx-xx
 
+* Issue #130: Upgraded to PKCS#11 v2.40
+
+
 SoftHSM 2.2.0 - 2016-12-05
 
 * Issue #143: Delete a token using softhsm2-util.
